--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,8 +2,9 @@ version: 2.1
 
 jobs:
   build:
-    docker:
-      - image: cimg/base:stable
+    macos:
+      xcode: 13.0.0
+    resource_class: macos.x86.medium.gen2
     parallelism: 30
     steps:
       - run: curl -sL firebase.tools | bash
