--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,10 +11,7 @@ executors:
 
 jobs:
   firebase-no-upgrade:
-    parameters:
-      exec:
-        type: executor
-    executor: << parameters.exec >>
+    executor: gen2
     steps:
       - run: |
           curl -svL https://firebase.tools | bash
@@ -30,15 +27,4 @@ jobs:
 workflows:
   main:
     jobs:
-      - firebase-no-upgrade:
-          matrix:
-            parameters:
-              exec:
-                - gen1
-                - gen2       
-      - firebase-with-upgrade:
-          matrix:
-            parameters:
-              exec:
-                - gen1
-                - gen2
+      - firebase-no-upgrade
